<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ReportFragment">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="I have a problem"
        android:textColor="@color/dark_red"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/editTextProblem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextProblem"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="410dp"
        android:background="@drawable/edit"
        android:backgroundTint="@color/light_beige"
        android:elevation="6dp"
        android:hint="@string/text_report_reports"
        android:inputType="text"
        android:paddingStart="6dp"
        android:textColor="#000000"
        android:textColorHint="@color/dark_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextProblem2"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit"
        android:backgroundTint="@color/light_beige"
        android:elevation="6dp"
        android:hint="@string/text_report_category"
        android:inputType="text"
        android:paddingStart="6dp"
        android:textColor="#000000"
        android:textColorHint="@color/dark_red"
        app:layout_constraintEnd_toEndOf="@+id/editTextProblem"
        app:layout_constraintStart_toStartOf="@+id/editTextProblem"
        app:layout_constraintTop_toBottomOf="@+id/editTextLocation" />

    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit"
        android:backgroundTint="@color/light_beige"
        android:elevation="6dp"
        android:hint="@string/text_report_location"
        android:inputType="text"
        android:paddingStart="6dp"
        android:textColor="#000000"
        android:textColorHint="@color/dark_red"
        app:layout_constraintStart_toStartOf="@+id/editTextProblem"
        app:layout_constraintTop_toBottomOf="@+id/editTextProblem" />

    <Button
        android:id="@+id/button"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/dark_red"
        android:text="My Location"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextLocation"
        app:layout_constraintEnd_toEndOf="@+id/editTextProblem"
        app:layout_constraintTop_toTopOf="@+id/editTextLocation" />

    <Button
        android:id="@+id/button4"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/dark_red"
        android:text="SEND"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextProblem2"
        app:layout_constraintStart_toStartOf="@+id/editTextProblem2"
        app:layout_constraintTop_toBottomOf="@+id/editTextProblem2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/dark_red"
        android:elevation="4dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/buttonEmergency"
            android:layout_width="112dp"
            android:layout_height="64dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:onClick="buttonEmergency"
            android:text="EMERGENCY"
            android:textColor="@color/dark_red"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonActiveProblems"
            android:layout_width="96dp"
            android:layout_height="64dp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            android:text="Active Problems"
            android:textColor="@color/dark_red"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonMyHelps"
            android:layout_width="96dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/white"
            android:text="My Helps"
            android:textColor="@color/dark_red"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        android:background="@color/light_beige"
        android:elevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextProblem"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <Button
            android:id="@+id/button6"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/dark_red"
            android:text="SEND SMS"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextProblem2"
            app:layout_constraintStart_toStartOf="@+id/editTextText4"
            app:layout_constraintTop_toBottomOf="@+id/editTextText4"
            tools:ignore="NotSibling" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="I want to be a solution"
            android:textColor="@color/dark_red"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Choose  a problem and be the solution"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Click and learn how you can help"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button6"
            app:layout_constraintStart_toStartOf="@+id/editTextText4"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit"
            android:elevation="6dp"
            android:hint="Choose Location"
            android:inputType="text"
            android:paddingStart="6dp"
            android:textColorHint="@color/dark_red"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/edit"
            android:elevation="6dp"
            android:hint="Choose Problem"
            android:inputType="text"
            android:paddingStart="6dp"
            android:textColorHint="@color/dark_red"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>